--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_URI=mongodb+srv://ankitsunil035_db_user:mjcCZiBU4T5ajWcT@pizzastore.2bv7oke.mongodb.net/
+DB_URI=mongodb+srv://ankitsunil035_db_user:mjcCZiBU4T5ajWcT@pizzastore.2bv7oke.mongodb.net/pizzastore_store_data
 JWT_SECRET=kumarpdc
